# probe-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  probe-agent.example.yml
apps/control-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/control-server/app/: api_scan.py  auth.py  capability_hierarchy.py  code_indexer.py  code_mapper.py  db.py  draft_generator.py  drift.py  entrypoint_discovery.py  evaluator.py  experiment_runner.py  flow_graph.py  git_ops.py  llm.py  main.py  models.py  patch_generator.py  probe_planner.py  refresh_proposal.py  security.py  validation_runner.py  workspace_actions.py  workspace_agent.py  workspace_context.py
apps/control-server/app/routes/: auth.py  components.py  evaluation.py  experiments.py  generation.py  project_intelligence.py  shadow.py  systems.py  traces.py  workspaces.py
apps/control-server/tests/: conftest.py  test_api.py  test_api_role_cards.py  test_api_scan.py  test_capability_hierarchy.py  test_entrypoint_discovery.py  test_evaluator.py  test_experiments.py  test_explanation_drift.py  test_explanation_refresh.py  test_feature_code_mapping.py  test_flow_graph.py  test_probe_plan.py  test_repository_intelligence.py  test_source_hash_provenance.py  test_source_metadata.py  test_workspace_actions.py  test_workspace_agent.py  test_workspace_context.py  test_workspaces.py
apps/dashboard/: Dockerfile  README.md  app.py  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  (+3 more)
docs/: ai-agent-improvement-guide.md  design.md  mvp.md  project-intelligence.md
(+55 files in other folders)
