[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-control-server"
version = "0.1.0"
description = "Control Server for probe-agent."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]
